Fix #109302: baking UDIM displacement normalization wrong

Since UDIM baking support in 6787cc13d4, the normalization of
diplacement heights was always based on the min/max height detected in
the _last_ tile, which could lead to clipping if the last tile had very
subtle (or no) displacement.

Now min/max is spread across all tiles.